Fix board background to not overlap fileds

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,10 +11,10 @@ body {
 .board {
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-  gap: 5px;
+  gap: 50px;
   max-width: 960px;
   margin: auto;
-  background: url(assets/ttt-board2.png);
+  background: url(assets/board3.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
